--- a/src/css/app.css
+++ b/src/css/app.css
@@ -2,11 +2,13 @@
 * Import: vars
 * Description: variables
 */
-@import 'vars.globals.css';
-@import 'vars.colors.css';
+@import "vars.globals.css";
+@import "vars.colors.css";
 
 /**
 * Import: component
 * Description: cross project reusable
 */
-@import 'test.component.css';
+@import "container.css";
+@import "authBox.css";
+@import "admin.css";
